--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 *{
-    
-    padding: 0;
+    margin: 0px;
+    padding: 0px;
     box-sizing: border-box;
 }
 header {
@@ -20,10 +20,20 @@ body  {
     justify-content: center;
     align-items: center;
 }
-dialog::backdrop {
+dialog {
     position: absolute;
-    
+    left:40%;
     top:40%;
+    color:aliceblue;
+    font-size: 1rem;
+    background: linear-gradient(45deg, grey,black);
+    background-color: white;
+    opacity: o.1;
+    border: 0px;
+}
+dialog::backdrop{
+  background:linear-gradient(45deg,black,grey);
+  
 }
 form {
     display: flex;
@@ -65,4 +75,40 @@ form {
     position: fixed;
     bottom:8rem;
     left: 45%;
+}
+ 
+ul {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap : 1em;
+  margin-top: 3em;
+}
+li {
+  height: 20em;
+  width: 2ð0em;
+  background-color: white;
+  opacity: 0.2;
+  border-radius: 2em;
+  color: black;
+  font-size: large;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 1em;
+}
+li h3 {
+  flex:1;
+  font-size: 2em;
+}
+li button {
+  background-color: black;
+  color:white;
+  width:100%;
+  font-size: 2em;
+  display: block;
+  flex-grow:1;
+  opacity: 1;
 }
